# CGTpod

./: .env.example  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: podcast.yml  test.yml
data/: accumulated.json  article_log.json
data/transcripts/: transcript_1be82a6573d743f3839ed15c2422964e.txt  transcript_262cbd02d16c414d9e1fd3cdb82432b1.txt  transcript_30620438fea44d76a07bbfedb48eea27.txt  transcript_3b00b1750755483195faafcac467bf45.txt  transcript_50238c78e8a944078d17ab74d8dadb3f.txt  transcript_50466f8fd8614ca19a0407c56f027913.txt  transcript_576cdeab68a9478d886611f23d68c325.txt  transcript_6076d3bc665f4758ad80eeed8894f5fc.txt  transcript_666fc6ae1fec4a38aaf8a60dd27bb05a.txt  transcript_74b86469053f4cb4a58b288b27845957.txt  transcript_77df6f8c5d44462b80eaa874509135ed.txt  transcript_8708f1bc688f45c7b47a64d9f1aedd32.txt  transcript_8854f0141ab649ed802b74d95f4a4018.txt  transcript_8903cfe7d8314344a41aa5b7a2b2cd2b.txt  transcript_9f4aa5f1cc4646df97d58110661069db.txt  transcript_a8b79900c0b44b7c80d2186b1145496f.txt  transcript_aa7d9dd0d8b5468b866a03409737eaf4.txt  transcript_ab77c26225b24407b0c169ea758268fa.txt  transcript_c110bc1473de4e16a478af56f5bd2c4a.txt  transcript_c183a710b362496e8d0dcc73c67f494c.txt  transcript_ce4209cc950846c9b491a479f55d4866.txt  transcript_d9b752a730324f93b85f0cdba35c2c09.txt  transcript_eb442155ad0a483fac84fe9cb7e868e7.txt  (+4 more)
docs/: feed.xml  feed_episodes.json
tests/: conftest.py  test_audio.py  test_classifier.py  test_feeds.py  test_pipeline.py  test_publisher.py  test_state.py
(+11 files in other folders)
