[project]
name = "cgtpod"
version = "0.1.0"
description = "Automated CGT news podcast pipeline"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
